Analyzing webpack and removing react

--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo 'ERROR : No Test'",
+    "build": "webpack",
+    "dev": "webpack serve",
+    "prod": "webpack --mode production",
+    "deploy": "git subtree push --prefix dist origin gh-pages",
+    "clean": "rm -rf dist/"
   },
   "author": "",
   "license": "ISC",
@@ -13,6 +18,7 @@
     "html-loader": "^5.1.0",
     "style-loader": "^4.0.0",
     "webpack": "^5.101.0",
+    "webpack-bundle-analyzer": "^4.10.2",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
   },
